# alacritty-theme

./: Cargo.toml  README.md
src/: main.rs
src/lib/: alacritty_config.rs  cli.rs  error.rs  mod.rs
test/: alacritty.yml
